Bug 329333 - bookmarking ##channels doesn't work properly
Summary: bookmarking ##channels doesn't work properly
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-28 18:36 UTC by Branko Grubic
Modified: 2017-08-18 07:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Branko Grubic 2013-12-28 18:36:55 UTC
When you try to bookmark ##channel it get saved as #channel which isn't as expected, you can edit it manually and fix that. (some #channels on some networks are just redirections to ##channel, but not all)

I asked about this in #konversation on freenode
"<Sho_> bitlord: iirc it comes down to a bug in KDE's bookmark manager stuff we use, the double-# is dropped because it's treated as a URL anchor
...
<bitlord> Sho_: thanks, so nothing can be done inside konversation :( 
...
<Sho_> bitlord: iirc not, but i don't mind if you file it anyway, perhaps something can be done about it long-term"
Comment 1 argonel 2017-08-18 07:50:41 UTC
Git commit 10e5ea343c2c05f48fb83650ffee5cfa846dbfd7 by Eli MacKenzie.
Committed on 11/08/2017 at 08:29.
Pushed by argonel into branch '1.7'.

Proper percent-encoding for bookmarks

Qt will automatically encode some characters, this adds decoding and
forces # to be encoded as well.

M  +4    -0    ChangeLog
M  +3    -0    src/connectionmanager.cpp
M  +4    -0    src/viewer/chatwindow.cpp

https://commits.kde.org/konversation/10e5ea343c2c05f48fb83650ffee5cfa846dbfd7