Proper percent-encoding for bookmarks

Qt will automatically encode some characters, this adds decoding and
forces # to be encoded as well.

BUG:329333